<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rt_pose_plotter</name>
  <version>0.1.0</version>
  <description>real-time position and velocity plotter</description>
  <maintainer email="kyutech.robosub@gmail.com">Ryohei Ohnishi</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>rt_pose_plotter_msgs</depend>
  <depend>localization_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
